# GX-DataLinker

./: .env  .gitignore  Cargo.toml  README.md  database.sql  package-lock.json  readme.md
Estoque/: Cargo.toml  Dockerfile  database.sql
Estoque/src/: main.rs
Gestor-Produtos/: .env  Cargo.toml  database.sql  dockerfile
Gestor-Produtos/src/: main.rs
IAGX-Page-v0.2/: .gitignore  deploy.sh  package.json
IAGX-Page-v0.2/src/: app.html
IAGX-Page-v0.2/src/lib/: Footer.svelte  Header.svelte
IAGX-Page-v0.2/src/routes/: +layout.svelte  +page.svelte
IAGX-Page-v0.2/src/routes/container/[id]/: +page.svelte
IAGX-Page-v0.2/src/routes/dev/: +page.svelte
IAGX-Page-v0.2/src/routes/login/: +page.svelte
IAGX-Page-v0.2/src/routes/perfil/[username]/: +page.svelte
Notas-Fiscais/: Cargo.toml  database.sql  dockerfile
Notas-Fiscais/src/: main.rs
Ordens-Compra/: .env  .gitignore  Cargo.toml  database.sql  dockerfile
Ordens-Compra/src/: main.rs
backWebsite-IAGX/: Cargo.toml  all_databaseWeb.sql
backWebsite-IAGX/src/: main.rs
src/: main.rs
uptime-kuma/data/: kuma.db-shm  kuma.db-wal
