[package]
name = "IAGX-NOTAS_FISCAIS"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
incremental = false