[package]
name = "Estoque"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.19"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
tokio-util = "0.7"
tower-http = { version = "0.6.2", features = ["cors"] }

[profile.release]
incremental = false
