[package]
name = "Gestor-Produtos"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
dotenvy = "0.15"
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-1"] }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
once_cell = "1.19"
tokio-util = "0.7"