[package]
name = "backWebsite-IAGX"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros"] }
dotenvy = "0.15"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
jsonwebtoken = "9"
chrono = "0.4"